<resources>
    <string name="app_name">messenger</string>
    <string name="full_screen_image_activity_display_message">FullScreenImage</string>
    <string name="attachments">attachments</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="_1ch">1ch</string>
    <string name="name">Name</string>
    <string name="textExample">Завершён ежегодный съезд эрудированных школьников, мечтающих глубоко проникнуть в тайны физических явлений и химических реакций.</string>
    <string name="timeExample">4:20</string>
    <string name="photo">photo</string>
    <string name="scroll_down">scroll down</string>
</resources>