<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textMessage"
    style="@style/Message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:gravity="end"
    android:background="@drawable/message_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        style="@style/SideInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/text"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textExample" />

    <TextView
        android:id="@+id/time"
        style="@style/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeExample" />

</LinearLayout>