<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/photoMessage"
    style="@style/Message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/message_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        style="@style/SideInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo"
        android:paddingStart="6dp"
        android:paddingTop="6dp"
        android:paddingEnd="6dp"
        android:paddingBottom="2dp"
        android:src="@mipmap/telefram" />

    <TextView
        android:id="@+id/time"
        style="@style/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeExample" />

</LinearLayout>