<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainName"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        style="@style/MainName"
        android:gravity="center"
        android:text="@string/_1ch"
        android:typeface="sans"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/messagesBackground"
        app:layout_constraintBottom_toTopOf="@id/sendingPanel"
        app:layout_constraintTop_toBottomOf="@id/mainName" />

    <LinearLayout
        android:id="@+id/sendingPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/panel"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/attachmentButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/attachments"
            android:background="@color/panel"
            android:src="@drawable/attachments_icon" />

        <EditText
            android:id="@+id/messageField"
            style="@style/MessageField"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/message"
            android:textColorHint="@color/icons"
            android:importantForAutofill="no"
            android:textIsSelectable="true" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/send"
            android:background="@drawable/send_button_background"
            android:src="@drawable/send_icon" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/scrollButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="3dp"
        android:contentDescription="@string/scroll_down"
        android:background="@drawable/send_button_background"
        android:visibility="visible"
        android:src="@drawable/scroll_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sendingPanel"/>

</androidx.constraintlayout.widget.ConstraintLayout>